example/__echo.yaml
# ---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: example-2

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
spec:
  selector:
    matchLabels:
      app: echo
  replicas: 1
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - image: gcr.io/google_containers/echoserver:1.4
        imagePullPolicy: Always
        name: echo
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  ports:
    - port: 8888
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app: echo

# ---
# # apiVersion: networking.k8s.io/v1
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: echo
#   annotations:
#     kubernetes.io/ingress.class: alb
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
#     alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
#     alb.ingress.kubernetes.io/target-type: ip
#     alb.ingress.kubernetes.io/group.name: alb-group-jpedro
#     alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-west-1:680615559476:certificate/302cd3ac-1119-4b58-9b80-9a97f0e16d17"
#     # alb.ingress.kubernetes.io/tags: APPLICATION-NAME=example,CHARGING-COST-CENTER=GDPKNE27219,ENVIRONMENT=DEVELOPMENT,SLA=BRONZE,CMDB_APPLICATION_INSTANCE_ID=INST_2021_3_15_6_32_46_8791001,INVENTORY-COST-CENTER=KNEG372
# spec:
#   rules:
#     - host: echo.kube.jpedro.dev
#       http:
#         paths:
#           - path: /*
#             # pathType: Prefix
#             backend:
#               # service:
#               #   name: ssl-redirect
#               #   port:
#               #     name: use-annotation
#               serviceName: ssl-redirect
#               servicePort: use-annotation
#           - path: /
#             # pathType: Prefix
#             backend:
#               # service:
#               #   name: service-echo
#               #   port:
#               #     number: 8888
#               serviceName: service-echo
#               servicePort: 8888
