example/__number.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-$NUMBER
spec:
  selector:
    matchLabels:
      app: echo-$NUMBER
  replicas: 1
  template:
    metadata:
      labels:
        app: echo-$NUMBER
    spec:
      containers:
      - name: echo
        image: jpedrob/echo
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: echo-$NUMBER
  annotations:
    king-rules/over: "king-rules"
    king-rules/host: "echo-$NUMBER.deploy.footway.com"
spec:
  type: NodePort
  selector:
    app: echo-$NUMBER
  ports:
  - port: 80
    targetPort: 8080
