example/play-2048.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "play-2048"
spec:
  selector:
    matchLabels:
      app: "play-2048"
  replicas: 1
  template:
    metadata:
      labels:
        app: "play-2048"
    spec:
      containers:
      - name: "play-2048"
        image: alexwhen/docker-2048
        imagePullPolicy: Always
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: "play-2048"
spec:
  type: NodePort
  selector:
    app: "play-2048"
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP

# ---
# # apiVersion: networking.k8s.io/v1
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: "2048"
#   annotations:
#     kubernetes.io/ingress.class: alb
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
#     alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
#     alb.ingress.kubernetes.io/target-type: ip
#     alb.ingress.kubernetes.io/group.name: example-alb-group
#     alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-west-1:680615559476:certificate/302cd3ac-1119-4b58-9b80-9a97f0e16d17"
#     # alb.ingress.kubernetes.io/tags: APPLICATION-NAME=example,CHARGING-COST-CENTER=GDPKNE27219,ENVIRONMENT=DEVELOPMENT,SLA=BRONZE,CMDB_APPLICATION_INSTANCE_ID=INST_2021_3_15_6_32_46_8791001,INVENTORY-COST-CENTER=KNEG372
# spec:
#   rules:
#     - host: 2048.kube.jpedro.dev
#       http:
#         paths:
#           - path: /*
#             # pathType: Prefix
#             backend:
#               # service:
#               #   name: ssl-redirect
#               #   port:
#               #     name: use-annotation
#               serviceName: ssl-redirect
#               servicePort: use-annotation
#           - path: /*
#             # pathType: Prefix
#             backend:
#               # service:
#               #   name: service-2048
#               #   port:
#               #     number: 80
#               serviceName: "2048"
#               servicePort: 80
