example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-$NUMBER
  annotations:
    king-rules/name: "king-rules"
    king-rules/host: "$NUMBER.jpedro.cloud.okteto.net"
spec:
  type: NodePort
  selector:
    app: echo-$NUMBER
  ports:
    - name: http
      port: 80
      targetPort: 8080
