example/test.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
spec:
  selector:
    matchLabels:
      app: test
  replicas: 1
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: test
        image: jpedrob/test:$TAG
        imagePullPolicy: Always
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  # type: NodePort
  type: LoadBalancer
  selector:
    app: test
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
