example/alb.yml
# ---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: example
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  # namespace: example
  name: pedro-2048
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2048
    spec:
      containers:
      - image: alexwhen/docker-2048
        imagePullPolicy: Always
        name: app-2048
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  # namespace: example-1
  name: pedro-2048
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-2048

---
# apiVersion: networking.k8s.io/v1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  # namespace: example
  name: pedro-2048
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: example-alb-group
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:958978240633:certificate/70399d1e-cc6c-4e3a-af76-f7da16ae5183
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-west-1:680615559476:certificate/302cd3ac-1119-4b58-9b80-9a97f0e16d17"
    # alb.ingress.kubernetes.io/tags: APPLICATION-NAME=example,CHARGING-COST-CENTER=GDPKNE27219,ENVIRONMENT=DEVELOPMENT,SLA=BRONZE,CMDB_APPLICATION_INSTANCE_ID=INST_2021_3_15_6_32_46_8791001,INVENTORY-COST-CENTER=KNEG372
spec:
  rules:
    - host: 2048.deploy.footway.com
      http:
        paths:
          - path: /*
            # pathType: Prefix
            backend:
              # service:
              #   name: ssl-redirect
              #   port: 
              #     name: use-annotation
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            # pathType: Prefix
            backend:
              # service:
              #   name: service-2048
              #   port:
              #     number: 80
              serviceName: service-2048
              servicePort: 80


# ---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: example-2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pedro-echoserver
  # namespace: example-2
spec:
  selector:
    matchLabels:
      app: echoserver
  replicas: 1
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
      - image: gcr.io/google_containers/echoserver:1.4
        imagePullPolicy: Always
        name: echoserver
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: pedro-echoserver
  # namespace: example-2
spec:
  ports:
    - port: 8888
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app: echoserver
---
# apiVersion: networking.k8s.io/v1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  # namespace: example-2
  name: pedro-echoserver
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: example-alb-group
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:958978240633:certificate/70399d1e-cc6c-4e3a-af76-f7da16ae5183
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-west-1:680615559476:certificate/302cd3ac-1119-4b58-9b80-9a97f0e16d17"
    # alb.ingress.kubernetes.io/tags: APPLICATION-NAME=example,CHARGING-COST-CENTER=GDPKNE27219,ENVIRONMENT=DEVELOPMENT,SLA=BRONZE,CMDB_APPLICATION_INSTANCE_ID=INST_2021_3_15_6_32_46_8791001,INVENTORY-COST-CENTER=KNEG372
spec:
  rules:
    - host: echoserver.deploy.footway.com
      http:
        paths:
          - path: /*
            # pathType: Prefix
            backend:
              # service:
              #   name: ssl-redirect
              #   port: 
              #     name: use-annotation
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /
            # pathType: Prefix
            backend:
              # service:
              #   name: service-echo
              #   port:
              #     number: 8888
              serviceName: service-echo
              servicePort: 8888
