example/common.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: king-rules
  # annotations:
  #   kubernetes.io/ingress.class: "ingress-alb"
  #   alb.ingress.kubernetes.io/scheme: internal
  #   alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-west-1:680615559476:certificate/302cd3ac-1119-4b58-9b80-9a97f0e16d17"
  #   alb.ingress.kubernetes.io/backend-protocol: HTTP
  #   alb.ingress.kubernetes.io/healthcheck-path: /
  #   alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
  #   alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'

spec:
  rules:
  - host: "jpedro.cloud.okteto.net"
    http:
      paths:
      - backend:
          serviceName: ssl-redirect
          servicePort: use-annotation
        path: /*
      - backend:
          serviceName: echo-01
          servicePort: 80
